--- a/Simproofn/Base.lproj/Main.storyboard
+++ b/Simproofn/Base.lproj/Main.storyboard
@@ -159,11 +159,11 @@
             </objects>
             <point key="canvasLocation" x="2520" y="237.67605633802816"/>
         </scene>
-        <!--Inbox-->
+        <!--Inbox View Controller-->
         <scene sceneID="nqd-IX-iv0">
             <objects>
                 <tableViewController id="Swn-sn-q0e" customClass="InboxViewController" customModule="Simproofn" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xVR-LD-Y8h">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="10" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xVR-LD-Y8h">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -225,35 +225,43 @@
                             <outlet property="delegate" destination="Swn-sn-q0e" id="ntm-yW-uZl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Inbox" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="ysZ-94-0YW">
-                        <barButtonItem key="leftBarButtonItem" image="ic_menu_hdpi" landscapeImage="ic_menu_hdpi" style="plain" id="Uqs-04-2vY">
+                    <navigationItem key="navigationItem" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="ysZ-94-0YW">
+                        <leftBarButtonItems>
+                            <barButtonItem image="ic_menu_hdpi" landscapeImage="ic_menu_hdpi" style="plain" id="Uqs-04-2vY">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </barButtonItem>
+                            <barButtonItem style="plain" id="lzG-CY-ciS">
+                                <view key="customView" userInteractionEnabled="NO" contentMode="scaleToFill" id="ywg-6A-rp3">
+                                    <rect key="frame" x="71" y="5.5" width="71" height="33"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maz-TN-LNt">
+                                            <rect key="frame" x="0.0" y="3" width="57" height="27"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="18"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="maz-TN-LNt" secondAttribute="trailing" constant="14" id="6eN-Zo-Ccq"/>
+                                        <constraint firstAttribute="bottom" secondItem="maz-TN-LNt" secondAttribute="bottom" constant="3" id="7Vf-E4-FQX"/>
+                                        <constraint firstItem="maz-TN-LNt" firstAttribute="leading" secondItem="ywg-6A-rp3" secondAttribute="leading" id="KsM-Qg-dF1"/>
+                                        <constraint firstItem="maz-TN-LNt" firstAttribute="top" secondItem="ywg-6A-rp3" secondAttribute="top" constant="3" id="aBi-e1-Xpf"/>
+                                    </constraints>
+                                </view>
+                            </barButtonItem>
+                        </leftBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="cancel" id="qBx-Ut-Bh6">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
-                        <rightBarButtonItems>
-                            <barButtonItem style="plain" systemItem="compose" id="qBx-Ut-Bh6">
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <action selector="composeButton:" destination="Swn-sn-q0e" id="H69-tc-Iru"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem systemItem="stop" id="SB5-rD-60r">
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <action selector="logoutButton:" destination="Swn-sn-q0e" id="vb5-IY-910"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
                     </navigationItem>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="SVK-dH-IqB">
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="f9L-VP-0at">
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
-                    <connections>
-                        <outlet property="composeButton" destination="qBx-Ut-Bh6" id="j1A-WH-78R"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VcR-x1-sgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5356.875" y="279.92957746478874"/>
+            <point key="canvasLocation" x="5336" y="280"/>
         </scene>
         <!--NameSender-->
         <scene sceneID="0Xl-eo-s62">
@@ -331,7 +339,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucv-dY-zDl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6339.375" y="279.92957746478874"/>
+            <point key="canvasLocation" x="6186" y="280"/>
         </scene>
         <!--Inbox-->
         <scene sceneID="Zb1-C1-Dh6">
