--- a/Simproofn/Base.lproj/Main.storyboard
+++ b/Simproofn/Base.lproj/Main.storyboard
@@ -268,7 +268,7 @@
             <objects>
                 <tableViewController id="WB1-Dn-ZOH" customClass="TopicListTableViewController" customModule="Simproofn" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ljk-Wv-Omx">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -301,8 +301,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbG-Ak-0No">
-                                                    <rect key="frame" x="270" y="5" width="31" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbG-Ak-0No">
+                                                    <rect key="frame" x="259" y="5" width="53" height="15"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="1" green="0.4431372549" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -318,6 +318,7 @@
                                     <outlet property="TopicLabel" destination="zxB-Xu-XJs" id="Fjm-uS-YK4"/>
                                     <outlet property="contentLabel" destination="0Ze-YY-dR0" id="g8G-Pn-vAU"/>
                                     <outlet property="recievedLabel" destination="YbG-Ak-0No" id="B4p-ZN-uqB"/>
+                                    <segue destination="Tf9-UT-xSV" kind="show" identifier="chatViewSegue" id="s4b-Sv-4Ru"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -327,19 +328,54 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="NameSender" id="fRG-Kb-cYA">
-                        <barButtonItem key="leftBarButtonItem" title="back" style="plain" id="zwS-CD-Zco">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="reply" id="zwS-CD-Zco">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="backButtonAction:" destination="WB1-Dn-ZOH" id="XbZ-fx-BW1"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="search" id="2x9-bq-mpb"/>
                     </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Jmr-L7-qlf">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucv-dY-zDl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6186" y="280"/>
+            <point key="canvasLocation" x="6185.625" y="279.92957746478874"/>
+        </scene>
+        <!--Chat Table View Controller-->
+        <scene sceneID="izv-9F-RFf">
+            <objects>
+                <tableViewController id="Tf9-UT-xSV" customClass="ChatTableViewController" customModule="Simproofn" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AYi-XD-pHi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="eFJ-iE-NOi">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eFJ-iE-NOi" id="BsF-3e-gY3">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Tf9-UT-xSV" id="ycY-no-esB"/>
+                            <outlet property="delegate" destination="Tf9-UT-xSV" id="P1j-jG-jQD"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="1a7-3n-Olu"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="yB2-ft-Go2">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y1e-OC-mmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7033" y="270"/>
         </scene>
         <!--Inbox-->
         <scene sceneID="Zb1-C1-Dh6">
